--- a/Maui/SimpleWeather.Maui/Preferences/PreferenceListDialogPage.xaml
+++ b/Maui/SimpleWeather.Maui/Preferences/PreferenceListDialogPage.xaml
@@ -6,45 +6,68 @@
     xmlns:local="clr-namespace:SimpleWeather.Maui.Preferences"
     xmlns:main="clr-namespace:SimpleWeather.Maui.Main"
     xmlns:matIcons="clr-namespace:SimpleWeather.Maui.MaterialIcons"
+    xmlns:ios="clr-namespace:Microsoft.Maui.Controls.PlatformConfiguration.iOSSpecific;assembly=Microsoft.Maui.Controls"
+    BackgroundColor="{AppThemeBinding Light={StaticResource LightPageBackground}, Dark={StaticResource DarkPageBackground}}"
     Title="{Binding Text}"
     x:DataType="local:ListViewCell"
-    BackgroundColor="{AppThemeBinding Light={StaticResource LightSurface},
-                                      Dark={StaticResource DarkSurface}}"
     main:AppShell.AppBarIsVisible="True">
 
-    <Frame BackgroundColor="Transparent" BorderColor="Transparent">
-        <ListView
-            x:Name="PreferenceListView"
-            BackgroundColor="Transparent"
-            HasUnevenRows="True"
-            IsGroupingEnabled="False"
-            IsPullToRefreshEnabled="False"
-            SelectionMode="Single"
-            SeparatorColor="{AppThemeBinding Light='#2073777F',
-                                             Dark='#408D9199'}"
-            SeparatorVisibility="Default"
-            VerticalOptions="FillAndExpand">
-            <ListView.ItemTemplate>
-                <DataTemplate x:DataType="local:PreferenceListItemViewModel">
-                    <local:TransparentViewCell>
-                        <HorizontalStackLayout Margin="0,2">
-                            <RadioButton IsChecked="{Binding IsChecked, Mode=TwoWay}" VerticalOptions="Center" />
-                            <VerticalStackLayout VerticalOptions="Center">
-                                <Label
-                                    FontSize="Default"
-                                    Text="{Binding Display}"
-                                    VerticalOptions="Center" />
-                                <Label
-                                    FontSize="Caption"
-                                    IsVisible="{Binding Detail, Converter={StaticResource stringBooleanConverter}}"
-                                    Text="{Binding Detail}"
-                                    VerticalOptions="Center" />
-                            </VerticalStackLayout>
-                        </HorizontalStackLayout>
-                    </local:TransparentViewCell>
-                </DataTemplate>
-            </ListView.ItemTemplate>
-        </ListView>
-    </Frame>
+    <ScrollView>
+        <Frame BackgroundColor="{AppThemeBinding Light={StaticResource LightBackground}, Dark={StaticResource DarkBackground}}"
+               BorderColor="Transparent"
+               CornerRadius="8"
+               Margin="16"
+               MinimumHeightRequest="0"
+               Padding="0"
+               VerticalOptions="Start">
+            <ListView
+                x:Name="PreferenceListView"
+                BackgroundColor="Transparent"
+                Margin="0"
+                MinimumHeightRequest="0"
+                HasUnevenRows="False"
+                RowHeight="48"
+                IsGroupingEnabled="False"
+                IsPullToRefreshEnabled="False"
+                SelectionMode="Single"
+                SeparatorColor="{AppThemeBinding Light='#20404040', Dark='#20C8C8C8'}"
+                VerticalOptions="CenterAndExpand"
+                VerticalScrollBarVisibility="Never"
+                ios:ListView.SeparatorStyle="Default">
+                <ListView.ItemTemplate>
+                    <DataTemplate x:DataType="local:PreferenceListItemViewModel">
+                        <local:TransparentViewCell>
+                            <Grid Margin="{OnPlatform MacCatalyst='16,2,16,2', Default='8,2,8,2'}" ColumnDefinitions="*,Auto">
+                                <VerticalStackLayout Grid.Column="0" VerticalOptions="Center">
+                                    <Label
+                                        FontSize="Default"
+                                        Text="{Binding Display}"
+                                        VerticalOptions="Center" />
+                                    <Label
+                                        FontSize="Caption"
+                                        IsVisible="{Binding Detail, Converter={StaticResource stringBooleanConverter}}"
+                                        Text="{Binding Detail}"
+                                        VerticalOptions="Center" />
+                                </VerticalStackLayout>
+                                <Border Grid.Column="1" HeightRequest="36" WidthRequest="36"
+                                        Stroke="Transparent">
+                                    <Image IsVisible="{Binding IsChecked, Mode=TwoWay}"
+                                            VerticalOptions="Center" HorizontalOptions="Center"
+                                            Margin="8">
+                                        <Image.Source>
+                                            <matIcons:MaterialIcon
+                                                Size="24"
+                                                Glyph="&#xe5ca;"
+                                                Color="{AppThemeBinding Light={StaticResource LightPrimary}, Dark={StaticResource DarkPrimary}}" />
+                                        </Image.Source>
+                                    </Image>
+                                </Border>
+                            </Grid>
+                        </local:TransparentViewCell>
+                    </DataTemplate>
+                </ListView.ItemTemplate>
+            </ListView>
+        </Frame>
+    </ScrollView>
 
 </ContentPage>
