--- a/Maui/SimpleWeather.Maui/Preferences/Settings_Icons.xaml
+++ b/Maui/SimpleWeather.Maui/Preferences/Settings_Icons.xaml
@@ -8,14 +8,21 @@
     xmlns:matIcons="clr-namespace:SimpleWeather.Maui.MaterialIcons"
     xmlns:res_strings="clr-namespace:SimpleWeather.Resources.Strings;assembly=SimpleWeather.Shared"
     xmlns:utils="clr-namespace:SimpleWeather.Utils;assembly=SimpleWeather.Shared"
+    BackgroundColor="{AppThemeBinding Light={StaticResource LightPageBackground}, Dark={StaticResource DarkPageBackground}}"
     Title="{x:Static res_strings:Resources.pref_title_icons}"
-    BackgroundColor="{AppThemeBinding Light={StaticResource LightBackground},
-                                      Dark={StaticResource DarkBackground}}"
     main:AppShell.AppBarIsVisible="True">
 
     <Grid>
-        <ScrollView Orientation="Vertical" Padding="16,0" HorizontalScrollBarVisibility="Never">
-            <VerticalStackLayout x:Name="IconRadioContainer" />
+        <ScrollView Orientation="Vertical" HorizontalScrollBarVisibility="Never">
+            <Frame BackgroundColor="{AppThemeBinding Light={StaticResource LightBackground}, Dark={StaticResource DarkBackground}}"
+                   BorderColor="Transparent"
+                   Margin="16"
+                   Padding="0"
+                   MinimumHeightRequest="0"
+                   VerticalOptions="Start"
+                   IsVisible="{Binding Source={x:Reference LoadingRing}, Path=IsRunning, Converter={StaticResource inverseBoolConverter}}">
+                <VerticalStackLayout x:Name="IconRadioContainer" />
+            </Frame>
         </ScrollView>
         <ActivityIndicator
             x:Name="LoadingRing"
