--- a/Maui/SimpleWeather.Maui/Resources/Styles/Colors.xaml
+++ b/Maui/SimpleWeather.Maui/Resources/Styles/Colors.xaml
@@ -56,7 +56,7 @@
     <Color x:Key="LightErrorContainer">#FFDAD4</Color>
     <Color x:Key="LightOnError">#FFFFFF</Color>
     <Color x:Key="LightOnErrorContainer">#410001</Color>
-    <Color x:Key="LightBackground">#FDFCFF</Color>
+    <Color x:Key="LightBackground">#FFFFFF</Color>
     <Color x:Key="LightOnBackground">#1B1B1B</Color>
     <Color x:Key="LightSurface">#FDFCFF</Color>
     <Color x:Key="LightOnSurface">#1B1B1B</Color>
@@ -101,6 +101,8 @@
     <Color x:Key="DarkPopoverBackground">#272727</Color>
     <Color x:Key="LightAppBarBorder">#E1E1E1</Color>
     <Color x:Key="DarkAppBarBorder">#404040</Color>
+    <Color x:Key="LightPageBackground">#F2F2F7</Color>
+    <Color x:Key="DarkPageBackground">#000000</Color>
     <!-- iOS Colors End -->
 
 </ResourceDictionary>
